Backend and general components done, some fixing required

--- a/avito-tech/src/components/MainPage/MainPage.scss
+++ b/avito-tech/src/components/MainPage/MainPage.scss
@@ -1,3 +1,10 @@
-img {
-    width: 50vmax;
+.free-games-logo {
+    width: 30vmax;
+    display: flex;
+    justify-content: center;
+}
+
+.spin {
+    display: flex;
+    justify-content: center;
 }
