--- a/avito-tech/src/components/MainPage/MainPage.scss
+++ b/avito-tech/src/components/MainPage/MainPage.scss
@@ -6,10 +6,7 @@
 .spin {
     display: flex;
     justify-content: center;
-}
-
-.pagination {
-    margin-top: 20%;
+    margin-top: 5vmax;
 }
 
 .card-list {
