--- a/avito-tech/src/features/Page404/page404.scss
+++ b/avito-tech/src/features/Page404/page404.scss
@@ -9,3 +9,14 @@
 #root > div > div > img {
   max-width: 100%;
 }
+
+@media (min-width: 300px) and (max-width: 500px) {
+  #root > div > div > img  {
+      min-width: 40vmax !important;
+  }
+  .not-found {
+    .site-button-ghost-wrapper {
+      margin: -10vmin 0 0 0;
+    }
+    }
+}
